feat(backend): paged + search endpoints for renters, units, tickets, vendors, payment runs, issued and post-dated cheques; lookups; properties stats in one aggregate (scale P1-3, P1-6, #14)
New (old endpoints unchanged for back-compat):
- GET /renters/paged?q=&page=&size=, /renters/search?q=&limit=, /renters/names?ids=
- GET /units/paged?q=&propertyId=&status=&floor=&page=&size=, /units/search, /units/names
- GET /tickets/paged?q=&propertyId=&status=&priority=&from=&to= (staff roles)
- GET /vendors/paged, /finance/payment-runs/paged?status=&from=&to=,
  /finance/issued-cheques/paged, /cheques/post-dated/paged
- POST /cheques/stats-by-leases?includeDrafts=true; LeaseChequeStatsDTO gains
  unclearedAmount, liveCount and liveAmount (live = not REPLACED/CANCELLED)

Every query binds the tenant and applies PropertyScope for a property manager
(a manager sees renters with a contract in their buildings, and renters with
none yet). Search terms are lowercased, trimmed and LIKE-escaped once
(core.util.Search). Names lookups take at most 200 ids; lookups at most 50.
The ticket list batches reporter/assignee names and reply/attachment counts per
page (also for the old unbounded list). The properties list reads unit counts,
vacancies and rent totals in one aggregate and managers in one batch.

ScaleListEndpointsIT (HTTP): pagination, filters, a mixed-case term, another
organisation's matching rows and a manager's scope for each endpoint, plus the
register and lease searches in mixed case. Mutation-checked: dropping the
manager scope fails 3 tests, dropping the lowercasing fails 5.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>